fix skip link showing on mobile

--- a/assets/scss/import/layout/header.scss
+++ b/assets/scss/import/layout/header.scss
@@ -29,9 +29,9 @@
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  margin: $indent__l auto 0;
+  margin: 0 auto;
   position: relative;
-  padding: $indent__s 0 0;
+  padding: $indent*2 0 0;
   background: transparent;
   align-items: flex-start;
 
